[package]
name = "mqtt-opa"
version = "0.1.0"
authors = ["Mike Yagley <myagley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-broker = { path = "../mqtt-broker" }
opa-compiler = { version = "0.1.0", git = "https://github.com/myagley/opa-rs" }
opa-wasm = { version = "0.1.0", git = "https://github.com/myagley/opa-rs" }
